[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/HUD.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/MoveCount.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/TimeDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/ComboDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/ScoreDisplay.tscn" type="PackedScene" id=5]

[node name="HUD" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -200.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1720.0
margin_bottom = 780.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 1430.0
margin_bottom = 780.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
custom_constants/separation = 300
alignment = 2

[node name="MoveCount" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 452.0
margin_right = 1430.0
margin_bottom = 466.0

[node name="TimeDisplay" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 766.0
margin_right = 1430.0
margin_bottom = 780.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 1434.0
margin_right = 1720.0
margin_bottom = 780.0
size_flags_horizontal = 3
custom_constants/separation = 250
alignment = 2

[node name="ComboDisplay" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 498.0
margin_right = 286.0
margin_bottom = 498.0
rect_scale = Vector2( 1, 1 )

[node name="ScoreDisplay" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 748.0
margin_right = 286.0
margin_bottom = 780.0
[connection signal="out_of_moves" from="HBoxContainer/VBoxContainer2/MoveCount" to="." method="_on_MoveCount_out_of_moves"]
[connection signal="out_of_time" from="HBoxContainer/VBoxContainer2/TimeDisplay" to="." method="_on_TimeDisplay_out_of_time"]
[connection signal="combo_done" from="HBoxContainer/VBoxContainer/ComboDisplay" to="." method="_on_ComboDisplay_combo_done" binds= [ 0 ]]
[connection signal="new_best_combo" from="HBoxContainer/VBoxContainer/ComboDisplay" to="." method="_on_ComboDisplay_new_best_combo" binds= [ 0 ]]
